--- a/kotlin-reactive-compose-rancher.yml
+++ b/kotlin-reactive-compose-rancher.yml
@@ -1,16 +1,16 @@
 version: '2'
 services:
- lb1:
-    image: rancher/load-balancer-service
+  hig-lb-test:
+    image: rancher/lb-service-haproxy:v0.6.2
     ports:
-    - 8081:80
+      - "${HTTP_PORT}"
+  reactive-app01:
+    image: an3ll/kotlin-reactive-app
+    ports:
+      - 8082:8080
 
- reactive-app01:
+  reactive-app02:
     image: an3ll/kotlin-reactive-app
     ports:
       - 8081:8080
 
- reactive-app02:
-    image: an3ll/kotlin-reactive-app
-    ports:
-      - 8082:8080
