--- a/kotlin-reactive-compose.yml
+++ b/kotlin-reactive-compose.yml
@@ -2,11 +2,11 @@ version: '2'
 services:
 
   reactive-app01:
-    image: kotlin-reactive-app
+    image: an3ll/kotlin-reactive-app
     ports:
       - 8082:8080
 
   reactive-app02:
-    image: kotlin-reactive-app
+    image: an3ll/kotlin-reactive-app
     ports:
       - 8081:8080
