--- a/kotlin-reactive-compose-rancher.yml
+++ b/kotlin-reactive-compose-rancher.yml
@@ -1,16 +1,16 @@
 version: '2'
 services:
-  hig-lb-test:
-    image: rancher/lb-service-haproxy:v0.6.2
-    ports:
-      - "${HTTP_PORT}"
+
   reactive-app01:
     image: an3ll/kotlin-reactive-app
     ports:
       - 8082:8080
+    labels:
+      io.rancher.scheduler.affinity:host_label: "host=host2"
 
   reactive-app02:
     image: an3ll/kotlin-reactive-app
     ports:
       - 8081:8080
-
+    labels:
+      io.rancher.scheduler.affinity:host_label: "host=host1"
